# data-driven-mad

./: .gitignore  cv.qmd  pyproject.toml  typst-show.typ  typst-template.typ
mock-api/: education.json  projects.json  work-experience.json
