[tool.poetry]
name = "quarto-cv"
version = "0.1.0"
description = "Data driven CV with Quarto"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
